--- a/xen-2.4.16/drivers/net/Makefile
+++ b/xen-2.4.16/drivers/net/Makefile
@@ -3,7 +3,7 @@ include $(BASEDIR)/Rules.mk
 
 default: $(OBJS)
 	$(MAKE) -C tulip
-	$(LD) -r -o driver.o tulip/tulip.o $(OBJS)
+	$(LD) -r -o driver.o $(OBJS) tulip/tulip.o 
 
 clean:
 	$(MAKE) -C tulip clean
