--- a/xenolinux-2.4.16-sparse/arch/xeno/mm/Makefile
+++ b/xenolinux-2.4.16-sparse/arch/xeno/mm/Makefile
@@ -1,6 +1,7 @@
 
+
 O_TARGET := mm.o
 
-obj-y	 := init.o fault.o extable.o hypervisor.o
+obj-y	 := init.o fault.o extable.o hypervisor.o get_unmapped_area.o mmu_context.o
 
 include $(TOPDIR)/Rules.make
