bitkeeper revision 1.7.1.9 (3dff745dQXvY5lV_SsLHnw3PlaxUMw)
robusify /proc/vfr parsing and xen Makefile tweak

--- a/xen-2.4.16/Makefile
+++ b/xen-2.4.16/Makefile
@@ -4,6 +4,7 @@ export BASEDIR := $(shell pwd)
 include Rules.mk
 
 default: $(TARGET)
+	gzip -f -9 < $(TARGET) > $(TARGET).gz
 
 install: $(TARGET)
 	gzip -f -9 < $(TARGET) > $(TARGET).gz
