bitkeeper revision 1.7.4.1 (3e26ce440CxOh3QHOvlZ-6A2yrzXyg)
gzip image

--- a/xen-2.4.16/Makefile
+++ b/xen-2.4.16/Makefile
@@ -23,6 +23,7 @@ $(TARGET): make-links
 	$(MAKE) -C net
 	$(MAKE) -C drivers
 	$(MAKE) -C arch/$(ARCH)
+	gzip -f -9 < $(TARGET) > $(TARGET).gz
 
 make-links:
 	ln -sf xeno include/linux
