bitkeeper revision 1.22.2.5 (3e450945yLX8dj3rzOsyoJx2Fo5A8g)
Now builds with -nostdinc to avoid confusion about where include files are coming from

--- a/xen-2.4.16/drivers/pci/Makefile
+++ b/xen-2.4.16/drivers/pci/Makefile
@@ -40,4 +40,5 @@ devlist.h classlist.h: pci.ids gen-devlist
 	./gen-devlist <pci.ids
 
 gen-devlist: gen-devlist.c
-	$(CC) $(CFLAGS) -o gen-devlist gen-devlist.c
+	$(HOSTCC) $(HOSTCFLAGS) -o gen-devlist gen-devlist.c
+
