bitkeeper revision 1.22.2.6 (3e453f3dCn57Rsy_s15t0vEHA2Pbbw)
Build image with "-g" to enable debuging symbols, then generate an 
"image.s" file that is the source annotated assembler. I've made this
the default.

--- a/xen-2.4.16/Makefile
+++ b/xen-2.4.16/Makefile
@@ -5,6 +5,7 @@ include Rules.mk
 
 default: $(TARGET)
 	gzip -f -9 < $(TARGET) > $(TARGET).gz
+	objdump -D -S image >image.s
 
 install: $(TARGET)
 	gzip -f -9 < $(TARGET) > $(TARGET).gz
