bitkeeper revision 1.22.2.7 (3e4540ce236_3mBFvJr9jn3-rPO3sA)
Support (untested) for Intel E1000 driver. This required adding a
bunch of new linux headers, and a fair bit of tidying. It correctly
detects the card, but I haven't sent/received any packets.

--- a/xen-2.4.16/drivers/net/Makefile
+++ b/xen-2.4.16/drivers/net/Makefile
@@ -3,8 +3,10 @@ include $(BASEDIR)/Rules.mk
 
 default: $(OBJS)
 	$(MAKE) -C tulip
-	$(LD) -r -o driver.o $(OBJS) tulip/tulip.o 
+	$(MAKE) -C e1000
+	$(LD) -r -o driver.o $(OBJS) tulip/tulip.o e1000/e1000.o
 
 clean:
 	$(MAKE) -C tulip clean
+	$(MAKE) -C e1000 clean
 	rm -f *.o *~ core
