--- a/xen-2.4.16/Makefile
+++ b/xen-2.4.16/Makefile
@@ -5,7 +5,7 @@ include Rules.mk
 
 default: $(TARGET)
 	gzip -f -9 < $(TARGET) > $(TARGET).gz
-	objdump -D -S image >image.s
+#	objdump -D -S image >image.s
 
 install: $(TARGET)
 	gzip -f -9 < $(TARGET) > $(TARGET).gz
