bitkeeper revision 1.22.2.16 (3e4a8d2aTphYwwULlRL1UC7BPu-ezQ)
rest of previous checkin

--- a/xen-2.4.16/drivers/Makefile
+++ b/xen-2.4.16/drivers/Makefile
@@ -1,12 +1,16 @@
 
 default:
+	$(MAKE) -C char
 	$(MAKE) -C pci
 	$(MAKE) -C net
 	$(MAKE) -C block
 	$(MAKE) -C ide
+#	$(MAKE) -C scsi
 
 clean:
+	$(MAKE) -C char clean
 	$(MAKE) -C pci clean
 	$(MAKE) -C net clean
 	$(MAKE) -C block clean
 	$(MAKE) -C ide clean
+#	$(MAKE) -C scsi clean
