bitkeeper revision 1.22.2.20 (3e4bb0deGlYf76D1jtppEmaeeRJyVQ)
Pulled in IO APIC stuff from linux-2.4.21-pre4

--- a/xen-2.4.16/drivers/net/Makefile
+++ b/xen-2.4.16/drivers/net/Makefile
@@ -4,7 +4,8 @@ include $(BASEDIR)/Rules.mk
 default: $(OBJS)
 	$(MAKE) -C ne
 	$(MAKE) -C tulip
-	$(LD) -r -o driver.o $(OBJS) tulip/tulip.o ne/ne_drv.o
+	$(MAKE) -C e1000
+	$(LD) -r -o driver.o e1000/e1000.o $(OBJS) tulip/tulip.o ne/ne_drv.o
 
 clean:
 	$(MAKE) -C ne clean
