bitkeeper revision 1.85 (3e56416dqUx5ejRHgvOG3eSEByO2Fg)
Many files:
  new file
  Sync of SMH's new SCSI world with latest repository.

--- a/xen-2.4.16/drivers/Makefile
+++ b/xen-2.4.16/drivers/Makefile
@@ -5,7 +5,7 @@ default:
 	$(MAKE) -C net
 	$(MAKE) -C block
 	$(MAKE) -C ide
-#	$(MAKE) -C scsi
+	$(MAKE) -C scsi
 
 clean:
 	$(MAKE) -C char clean
@@ -13,4 +13,4 @@ clean:
 	$(MAKE) -C net clean
 	$(MAKE) -C block clean
 	$(MAKE) -C ide clean
-#	$(MAKE) -C scsi clean
+	$(MAKE) -C scsi clean
