--- a/xen-2.4.16/drivers/scsi/Makefile
+++ b/xen-2.4.16/drivers/scsi/Makefile
@@ -2,7 +2,10 @@
 include $(BASEDIR)/Rules.mk
 
 default: $(OBJS)
-	$(LD) -r -o driver.o $(OBJS)
+	$(MAKE) -C aacraid
+	$(LD) -r -o driver.o $(OBJS) aacraid/aacraid.o
+#	$(LD) -r -o driver.o $(OBJS) 
 
 clean:
+	$(MAKE) -C aacraid clean
 	rm -f *.o *~ core
