bitkeeper revision 1.100.1.1 (3e5d12a9XS1t15We3dHlj4sxiwEeWQ)
add create segment code in xen,
/proc/xeno/dom0/vhd in xenolinux

--- a/xen/Makefile
+++ b/xen/Makefile
@@ -39,3 +39,5 @@ TAGS:
 	find include -type d \( -name "asm-*" -o -name config \) -prune -o -name '*.h' -print | xargs etags -a
 	find $(SUBDIRS) -name '*.[ch]' | xargs etags -a
 
+MAP:
+	nm image | grep -v '\(compiled\)\|\(\.o$$\)\|\( [aUw] \)\|\(\.\.ng$$\)\|\(LASH[RL]DI\)' | sort > System.map
