bitkeeper revision 1.154.1.1 (3e7f35e65e93xTR77zgPWlou5QJAgw)
Added aic7xxx support
Included linux string library in place of cut down lib.{c,h} versions
Added missing strtoul prototype in lib.h

--- a/xen/drivers/scsi/Makefile
+++ b/xen/drivers/scsi/Makefile
@@ -3,9 +3,11 @@ include $(BASEDIR)/Rules.mk
 
 default: $(OBJS)
 	$(MAKE) -C aacraid
-	$(LD) -r -o driver.o $(OBJS) aacraid/aacraid.o
+	$(MAKE) -C aic7xxx
+	$(LD) -r -o driver.o $(OBJS) aacraid/aacraid.o aic7xxx/aic7xxx.o
 #	$(LD) -r -o driver.o $(OBJS) 
 
 clean:
 	$(MAKE) -C aacraid clean
+	$(MAKE) -C aic7xxx clean
 	rm -f *.o *~ core
