bitkeeper revision 1.164 (3e955023D4pXlN3OeywA3uvFrE7d9g)
few megaraid changes

--- a/xen/drivers/scsi/Makefile
+++ b/xen/drivers/scsi/Makefile
@@ -1,11 +1,13 @@
 
 include $(BASEDIR)/Rules.mk
 
+# naive OBJS rule gets link order wrong
+SCSIOBJS := scsi.o hosts.o scsicam.o scsi_dma.o scsi_error.o scsi_ioctl.o scsi_lib.o scsi_merge.o scsi_proc.o scsi_queue.o scsi_scan.o scsi_syms.o constants.o sd.o aacraid/aacraid.o aic7xxx/aic7xxx.o megaraid.o
+
 default: $(OBJS)
 	$(MAKE) -C aacraid
 	$(MAKE) -C aic7xxx
-	$(LD) -r -o driver.o $(OBJS) aacraid/aacraid.o aic7xxx/aic7xxx.o
-#	$(LD) -r -o driver.o $(OBJS) 
+	$(LD) -r -o driver.o $(SCSIOBJS)
 
 clean:
 	$(MAKE) -C aacraid clean
