bitkeeper revision 1.166 (3e9c248dVGQSFqCQP51wgrGBpJNZoA)
initial support for ide cdrom drives

--- a/xen/drivers/Makefile
+++ b/xen/drivers/Makefile
@@ -4,6 +4,7 @@ default:
 	$(MAKE) -C pci
 	$(MAKE) -C net
 	$(MAKE) -C block
+	$(MAKE) -C cdrom
 	$(MAKE) -C ide
 	$(MAKE) -C scsi
 
@@ -12,5 +13,6 @@ clean:
 	$(MAKE) -C pci clean
 	$(MAKE) -C net clean
 	$(MAKE) -C block clean
+	$(MAKE) -C cdrom clean
 	$(MAKE) -C ide clean
 	$(MAKE) -C scsi clean
