bitkeeper revision 1.184.1.1 (3ea6af80NfieJpdXAH_E9VdoYOKtXQ)
fixed broken symlink creation

--- a/xen/Makefile
+++ b/xen/Makefile
@@ -28,7 +28,7 @@ $(TARGET): make-links
 	$(MAKE) -C drivers
 	$(MAKE) -C arch/$(ARCH)
 
-make-links:
+make-links: delete-links
 	ln -sf xeno include/linux
 	ln -sf asm-$(ARCH) include/asm
 
