bitkeeper revision 1.178.2.1 (3ead095fnpL5TUgwn6hztSXztuDhxQ)
PS/2 keyboard and mouse support

--- a/xenolinux-2.4.21-pre4-sparse/arch/xeno/config.in
+++ b/xenolinux-2.4.21-pre4-sparse/arch/xeno/config.in
@@ -107,6 +107,8 @@ source drivers/block/Config.in
 define_bool CONFIG_BLK_DEV_IDE_MODES n
 define_bool CONFIG_BLK_DEV_HD n
 
+source drivers/char/Config.in
+
 source fs/Config.in
 
 mainmenu_option next_comment
