bitkeeper revision 1.203.1.1 (3eb3c88bjetxHzcoqH6QUfVIBCLFGg)
xen.flf, figlet.c, README, Makefile, LICENSE, version.h, kernel.c:
  More initial banner fixes -- build version is stored in root Makefile.
xen.flf, figlet.c, README, Makefile, LICENSE:
  new file

--- a/xen/tools/Makefile
+++ b/xen/tools/Makefile
@@ -1,6 +1,14 @@
 
+all: figlet elf-reloc
+
+figlet:
+	$(MAKE) -C figlet
+
 elf-reloc: elf-reloc.c
 	gcc -O2 -Wall -o $@ $<
 
 clean:
 	rm -f elf-reloc *~ core
+	$(MAKE) -C figlet clean
+
+.PHONY: figlet
