bitkeeper revision 1.211 (3eb92435Me0VsFGKxdrtpCw31sPWBw)
add "make install" target to install boot and binary files in
install/boot and install/bin as appropriate

--- a/tools/balloon/Makefile
+++ b/tools/balloon/Makefile
@@ -1,8 +1,11 @@
 CC = gcc
 TARGET=balloon
 
-TARGET: balloon.c
+$(TARGET): balloon.c
 	$(CC) -O2 -Wall -o $(TARGET) balloon.c
+
+install: $(TARGET)
+	cp  $(TARGET) ../../../install/bin
 
 clean:
 	$(RM) *.o $(TARGET) *~
