--- a/tools/vdmanager/Makefile
+++ b/tools/vdmanager/Makefile
@@ -1,6 +1,9 @@
 default:
 	ant dist
 
+install: default
+	cp -a vdmanager vdmanager.jar ../../../install/bin
+
 clean:
 	ant clean
 	rm -f vdmanager.jar
