--- a/xen/Makefile
+++ b/xen/Makefile
@@ -19,7 +19,7 @@ debug:
 
 install: $(TARGET)
 	gzip -f -9 < $(TARGET) > $(TARGET).gz
-	cp $(TARGET).gz ../../install/images/image
+	cp $(TARGET).gz ../../install/boot/
 
 clean: delete-links
 	$(MAKE) -C tools clean
