--- a/xenolinux-2.4.21-pre4-sparse/arch/xeno/Makefile
+++ b/xenolinux-2.4.21-pre4-sparse/arch/xeno/Makefile
@@ -89,6 +89,9 @@ FORCE: ;
 bzImage: vmlinux
 	@$(MAKEBOOT) image.gz
 
+install: bzImage
+	cp -a arch/$(ARCH)/boot/image.gz ../install/boot/xenolinux.gz
+
 archclean:
 	@$(MAKEBOOT) clean
 
