--- a/tools/internal/Makefile
+++ b/tools/internal/Makefile
@@ -27,6 +27,9 @@ $(XI_STOP).o: $(XI_STOP).c dom0_defs.h dom0_ops.h hypervisor_defs.h mem_defs.h
 $(XI_DESTROY).o: $(XI_DESTROY).c dom0_ops.h dom0_defs.h
 	$(CC) -c $(XI_DESTROY).c 
 
+install: all
+	cp -a $(XI_CREATE) $(XI_BUILD) $(XI_START) $(XI_STOP) $(XI_DESTROY) ../../../install/bin
+
 clean:
 	$(RM) *.o $(XI_CREATE) $(XI_START) $(XI_STOP) $(XI_DESTROY) $(XI_BUILD)
 
