--- a/xenolinux-2.4.21-pre4-sparse/arch/xeno/Makefile
+++ b/xenolinux-2.4.21-pre4-sparse/arch/xeno/Makefile
@@ -90,6 +90,7 @@ bzImage: vmlinux
 	@$(MAKEBOOT) image.gz
 
 install: bzImage
+	cp -a arch/$(ARCH)/boot/image ../install/boot/xenolinux
 	cp -a arch/$(ARCH)/boot/image.gz ../install/boot/xenolinux.gz
 
 archclean:
