bitkeeper revision 1.216 (3eb93bd2LHmbNRayIk-VrRYgW9v3gQ)
chmod script

--- a/tools/domctl/Makefile
+++ b/tools/domctl/Makefile
@@ -3,7 +3,7 @@ default:
 
 install: default
 	cp domctl.jar domctl ../../../install/bin
-
+	chmod 755 ../../../install/bin/domctl
 clean:
 	ant clean
 	rm -f domctl.jar
