--- a/tools/vdmanager/Makefile
+++ b/tools/vdmanager/Makefile
@@ -3,7 +3,7 @@ default:
 
 install: default
 	cp -a vdmanager vdmanager.jar ../../../install/bin
-
+	chmod 755 ../../../install/bin/vdmanager
 clean:
 	ant clean
 	rm -f vdmanager.jar
