bitkeeper revision 1.234 (3ec4b7bcNQq46IUAjB_RJ2Gfthg1HQ)
build.properties, Makefile:
  Fix build scripts for xenctl tools.

--- a/tools/control/build.properties
+++ b/tools/control/build.properties
@@ -1,8 +1,8 @@
-catalina.home=/anfs/scratch/labyrinth/ach61/jakarta-tomcat-4.1.24
+catalina.home=/usr/groups/xeno/build_tools/jakarta-tomcat-4.1.24
 manager.url=http://mousetrap-0.xeno.cl.cam.ac.uk:80/manager
 manager.username=hobbes
 manager.password=tiger
 compile.optimize=false
-build.home=/anfs/scratch/labyrinth/ach61/xeno-clone/xeno.bk/tools/control/build-xen
+build.home=${basedir}/build-xen
 app.name=xenctl
 
