bitkeeper revision 1.235.2.1 (3ec61e2bA2DmJ62U7OOfdZvvjGAwMQ)
rpm.spec:
  new file
Makefile:
  Example RPM make file and spec

--- a/tools/internal/Makefile
+++ b/tools/internal/Makefile
@@ -32,6 +32,14 @@ install: all
 	chmod 755 ../../../install/bin/xi_list
 	chmod 755 ../../../install/bin/xi_vifinit
 
+rpm: all
+	rm -rf staging
+	mkdir staging
+	mkdir staging/i386
+	rpm --define "staging$$PWD/staging" --define '_builddir.' --define "_rpmdir$$PWD/staging" -bb rpm.spec
+	mv staging/i386/*.rpm .
+	rm -rf staging
+
 clean:
-	$(RM) *.o $(XI_CREATE) $(XI_START) $(XI_STOP) $(XI_DESTROY) $(XI_BUILD)
+	$(RM) *.o *.rpm $(XI_CREATE) $(XI_START) $(XI_STOP) $(XI_DESTROY) $(XI_BUILD)
 
