bitkeeper revision 1.244 (3ec8e1d5VNymyL_tYaB06GDYNuDbnA)
comments in build.properties

--- a/tools/control/build.properties
+++ b/tools/control/build.properties
@@ -1,8 +1,10 @@
 catalina.home=/usr/groups/xeno/build_tools/jakarta-tomcat-4.1.24
-manager.url=http://mousetrap-0.xeno.cl.cam.ac.uk:80/manager
+# change <hostname> to your xenoserver
+manager.url=http://<hostname>/manager
 manager.username=hobbes
 manager.password=tiger
 compile.optimize=false
-build.home=${basedir}/build-xen
+# change <path> to the full path
+build.home=<path>/xeno.bk/tools/control/build-xen/build-xen
 app.name=xenctl
 
