bitkeeper revision 1.247 (3eca6fcbSryfLAInJ09OOe4wWo52ew)
add xi_helper to tools/internal/Makefile

--- a/tools/internal/Makefile
+++ b/tools/internal/Makefile
@@ -28,9 +28,10 @@ $(XI_DESTROY).o: $(XI_DESTROY).c dom0_ops.h dom0_defs.h
 	$(CC) -c $(XI_DESTROY).c 
 
 install: all
-	cp -a xi_list xi_vifinit $(XI_CREATE) $(XI_BUILD) $(XI_START) $(XI_STOP) $(XI_DESTROY) ../../../install/bin
+	cp -a xi_list xi_vifinit xi_helper $(XI_CREATE) $(XI_BUILD) $(XI_START) $(XI_STOP) $(XI_DESTROY) ../../../install/bin
 	chmod 755 ../../../install/bin/xi_list
 	chmod 755 ../../../install/bin/xi_vifinit
+	chmod 755 ../../../install/bin/xi_helper
 
 rpm: all
 	rm -rf staging
