bitkeeper revision 1.259.1.1 (3f045a1aTKC1vRJU2nif7VHOWTRJ1g)
New physical disk access control stuff.

--- a/xenolinux-2.4.21-sparse/arch/xeno/drivers/block/Makefile
+++ b/xenolinux-2.4.21-sparse/arch/xeno/drivers/block/Makefile
@@ -1,3 +1,3 @@
 O_TARGET := blk.o
-obj-y := xl_block.o xl_ide.o xl_scsi.o xl_segment.o xl_segment_proc.o
+obj-y := xl_block.o xl_ide.o xl_scsi.o xl_segment.o xl_segment_proc.o xl_physdisk_proc.o
 include $(TOPDIR)/Rules.make
