--- a/tools/internal/Makefile
+++ b/tools/internal/Makefile
@@ -4,13 +4,18 @@ XI_START = xi_start
 XI_STOP = xi_stop
 XI_DESTROY = xi_destroy
 XI_BUILD = xi_build
+XI_PHYS_GRANT = xi_phys_grant
+XI_PHYS_REVOKE = xi_phys_revoke
 
-all: $(XI_CREATE).o $(XI_START).o $(XI_STOP).o $(XI_DESTROY).o $(XI_BUILD).o
+all: $(XI_CREATE).o $(XI_START).o $(XI_STOP).o $(XI_DESTROY).o $(XI_BUILD).o \
+	$(XI_PHYS_GRANT).o $(XI_PHYS_REVOKE).o
 	$(CC) -o $(XI_CREATE) $(XI_CREATE).o
 	$(CC) -o $(XI_BUILD) $(XI_BUILD).o
 	$(CC) -o $(XI_START) $(XI_START).o
 	$(CC) -o $(XI_STOP) $(XI_STOP).o
 	$(CC) -o $(XI_DESTROY) $(XI_DESTROY).o
+	$(CC) -o $(XI_PHYS_GRANT) $(XI_PHYS_GRANT).o
+	$(CC) -o $(XI_PHYS_REVOKE) $(XI_PHYS_REVOKE).o
 
 $(XI_CREATE).o: $(XI_CREATE).c dom0_defs.h dom0_ops.h hypervisor_defs.h mem_defs.h
 	$(CC) -c $(XI_CREATE).c 
@@ -27,8 +32,14 @@ $(XI_STOP).o: $(XI_STOP).c dom0_defs.h dom0_ops.h hypervisor_defs.h mem_defs.h
 $(XI_DESTROY).o: $(XI_DESTROY).c dom0_ops.h dom0_defs.h
 	$(CC) -c $(XI_DESTROY).c 
 
+$(XI_PHYS_GRANT).o: $(XI_PHYS_GRANT).c physdev.h
+	$(CC) -c $(XI_PHYS_GRANT).c 
+
+$(XI_PHYS_REVOKE).o: $(XI_PHYS_REVOKE).c physdev.h
+	$(CC) -c $(XI_PHYS_REVOKE).c 
+
 install: all
-	cp -a xi_list xi_vifinit xi_helper $(XI_CREATE) $(XI_BUILD) $(XI_START) $(XI_STOP) $(XI_DESTROY) ../../../install/bin
+	cp -a xi_list xi_vifinit xi_helper $(XI_CREATE) $(XI_BUILD) $(XI_START) $(XI_STOP) $(XI_DESTROY) $(XI_PHYSDEV_GRANT) $(XI_PHYS_REVOKE) ../../../install/bin
 	chmod 755 ../../../install/bin/xi_list
 	chmod 755 ../../../install/bin/xi_vifinit
 	chmod 755 ../../../install/bin/xi_helper
@@ -42,5 +53,5 @@ rpm: all
 	rm -rf staging
 
 clean:
-	$(RM) *.o *.rpm $(XI_CREATE) $(XI_START) $(XI_STOP) $(XI_DESTROY) $(XI_BUILD)
+	$(RM) *.o *.rpm $(XI_CREATE) $(XI_START) $(XI_STOP) $(XI_DESTROY) $(XI_BUILD) $(XI_PHYSDEV_GRANT)
 
