bitkeeper revision 1.266 (3f054ea7i0rAG6Iai3U1MfAFEUMAMQ)
Numerous bug fixes, and a slightly less perverted /proc interface.

--- a/tools/internal/Makefile
+++ b/tools/internal/Makefile
@@ -6,9 +6,10 @@ XI_DESTROY = xi_destroy
 XI_BUILD = xi_build
 XI_PHYS_GRANT = xi_phys_grant
 XI_PHYS_REVOKE = xi_phys_revoke
+XI_PHYS_PROBE = xi_phys_probe
 
 all: $(XI_CREATE).o $(XI_START).o $(XI_STOP).o $(XI_DESTROY).o $(XI_BUILD).o \
-	$(XI_PHYS_GRANT).o $(XI_PHYS_REVOKE).o
+	$(XI_PHYS_GRANT).o $(XI_PHYS_REVOKE).o $(XI_PHYS_PROBE).o
 	$(CC) -o $(XI_CREATE) $(XI_CREATE).o
 	$(CC) -o $(XI_BUILD) $(XI_BUILD).o
 	$(CC) -o $(XI_START) $(XI_START).o
@@ -16,6 +17,7 @@ all: $(XI_CREATE).o $(XI_START).o $(XI_STOP).o $(XI_DESTROY).o $(XI_BUILD).o \
 	$(CC) -o $(XI_DESTROY) $(XI_DESTROY).o
 	$(CC) -o $(XI_PHYS_GRANT) $(XI_PHYS_GRANT).o
 	$(CC) -o $(XI_PHYS_REVOKE) $(XI_PHYS_REVOKE).o
+	$(CC) -o $(XI_PHYS_PROBE) $(XI_PHYS_PROBE).o
 
 $(XI_CREATE).o: $(XI_CREATE).c dom0_defs.h dom0_ops.h hypervisor_defs.h mem_defs.h
 	$(CC) -c $(XI_CREATE).c 
@@ -38,8 +40,11 @@ $(XI_PHYS_GRANT).o: $(XI_PHYS_GRANT).c physdev.h
 $(XI_PHYS_REVOKE).o: $(XI_PHYS_REVOKE).c physdev.h
 	$(CC) -c $(XI_PHYS_REVOKE).c 
 
+$(XI_PHYS_PROBE).o: $(XI_PHYS_PROBE).c physdev.h
+	$(CC) -c $(XI_PHYS_PROBE).c 
+
 install: all
-	cp -a xi_list xi_vifinit xi_helper $(XI_CREATE) $(XI_BUILD) $(XI_START) $(XI_STOP) $(XI_DESTROY) $(XI_PHYSDEV_GRANT) $(XI_PHYS_REVOKE) ../../../install/bin
+	cp -a xi_list xi_vifinit xi_helper $(XI_CREATE) $(XI_BUILD) $(XI_START) $(XI_STOP) $(XI_DESTROY) $(XI_PHYSDEV_GRANT) $(XI_PHYS_REVOKE) $(XI_PHYS_PROBE).o../../../install/bin
 	chmod 755 ../../../install/bin/xi_list
 	chmod 755 ../../../install/bin/xi_vifinit
 	chmod 755 ../../../install/bin/xi_helper
