bitkeeper revision 1.289.2.1 (3f0a85f5xjvFUq5ZTEasVl-wUhVijg)
Kill off hypervisor_defs.h and physdev.h.

--- a/tools/internal/Makefile
+++ b/tools/internal/Makefile
@@ -1,4 +1,5 @@
 CC = gcc
+CFLAGS = -Wall -I../../xen/include
 XI_CREATE = xi_create
 XI_START = xi_start
 XI_STOP = xi_stop
@@ -19,29 +20,29 @@ all: $(XI_CREATE).o $(XI_START).o $(XI_STOP).o $(XI_DESTROY).o $(XI_BUILD).o \
 	$(CC) -o $(XI_PHYS_REVOKE) $(XI_PHYS_REVOKE).o
 	$(CC) -o $(XI_PHYS_PROBE) $(XI_PHYS_PROBE).o
 
-$(XI_CREATE).o: $(XI_CREATE).c dom0_defs.h dom0_ops.h hypervisor_defs.h mem_defs.h
-	$(CC) -c $(XI_CREATE).c 
+$(XI_CREATE).o: $(XI_CREATE).c dom0_defs.h dom0_ops.h mem_defs.h
+	$(CC) $(CFLAGS) -c $(XI_CREATE).c 
 
-internal_domain_build.o: internal_domain_build.c dom0_defs.h dom0_ops.h hypervisor_defs.h mem_defs.h
-	$(CC) -c internal_domain_build.c 
+internal_domain_build.o: internal_domain_build.c dom0_defs.h dom0_ops.h mem_defs.h
+	$(CC) $(CFLAGS) -c internal_domain_build.c 
 
-$(XI_START).o: $(XI_START).c dom0_defs.h dom0_ops.h hypervisor_defs.h mem_defs.h
-	$(CC) -c $(XI_START).c 
+$(XI_START).o: $(XI_START).c dom0_defs.h dom0_ops.h mem_defs.h
+	$(CC) $(CFLAGS) -c $(XI_START).c 
 
-$(XI_STOP).o: $(XI_STOP).c dom0_defs.h dom0_ops.h hypervisor_defs.h mem_defs.h
-	$(CC) -c $(XI_STOP).c 
+$(XI_STOP).o: $(XI_STOP).c dom0_defs.h dom0_ops.h mem_defs.h
+	$(CC) $(CFLAGS) -c $(XI_STOP).c 
 
 $(XI_DESTROY).o: $(XI_DESTROY).c dom0_ops.h dom0_defs.h
-	$(CC) -c $(XI_DESTROY).c 
+	$(CC) $(CFLAGS) -c $(XI_DESTROY).c 
 
-$(XI_PHYS_GRANT).o: $(XI_PHYS_GRANT).c physdev.h
-	$(CC) -c $(XI_PHYS_GRANT).c 
+$(XI_PHYS_GRANT).o: $(XI_PHYS_GRANT).c 
+	$(CC) $(CFLAGS) -c $(XI_PHYS_GRANT).c 
 
-$(XI_PHYS_REVOKE).o: $(XI_PHYS_REVOKE).c physdev.h
-	$(CC) -c $(XI_PHYS_REVOKE).c 
+$(XI_PHYS_REVOKE).o: $(XI_PHYS_REVOKE).c
+	$(CC) $(CFLAGS) -c $(XI_PHYS_REVOKE).c 
 
-$(XI_PHYS_PROBE).o: $(XI_PHYS_PROBE).c physdev.h
-	$(CC) -c $(XI_PHYS_PROBE).c 
+$(XI_PHYS_PROBE).o: $(XI_PHYS_PROBE).c
+	$(CC) $(CFLAGS) -c $(XI_PHYS_PROBE).c 
 
 install: all
 	cp -a xi_list xi_vifinit xi_helper $(XI_CREATE) $(XI_BUILD) $(XI_START) $(XI_STOP) $(XI_DESTROY) $(XI_PHYSDEV_GRANT) $(XI_PHYS_REVOKE) $(XI_PHYS_PROBE).o../../../install/bin
