--- a/xenolinux-2.4.21-sparse/arch/xeno/mm/Makefile
+++ b/xenolinux-2.4.21-sparse/arch/xeno/mm/Makefile
@@ -9,7 +9,7 @@
 
 O_TARGET := mm.o
 
-obj-y	 := init.o fault.o extable.o pageattr.o hypervisor.o get_unmapped_area.o mmu_context.o
+obj-y	 := init.o fault.o extable.o pageattr.o hypervisor.o get_unmapped_area.o
 
 export-objs := pageattr.o
 
