bitkeeper revision 1.259.4.1 (3f0bed4cJB9LOOhEpc2nIhwKM2NwAA)
ioremap.c:
  new file
mkbuildtree, Makefile, dom0_memory.c:
  ioremap support in Xenolinux.
.del-io.h~441bb6eed5f4a3f5:
  Delete: xenolinux-2.4.21-sparse/include/asm-xeno/io.h

--- a/xenolinux-2.4.21-sparse/arch/xeno/mm/Makefile
+++ b/xenolinux-2.4.21-sparse/arch/xeno/mm/Makefile
@@ -9,7 +9,7 @@
 
 O_TARGET := mm.o
 
-obj-y	 := init.o fault.o extable.o pageattr.o hypervisor.o get_unmapped_area.o
+obj-y	 := init.o fault.o extable.o pageattr.o hypervisor.o get_unmapped_area.o ioremap.o
 
 export-objs := pageattr.o
 
