bitkeeper revision 1.321 (3f0c3721EPUc_lgxSWz2JlomJJPMtg)
Move XenoLinux-specific stuff from hypervisor interface
include files to XenoLinux include file.

--- a/tools/internal/Makefile
+++ b/tools/internal/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-CFLAGS = -Wall -I../../xen/include
+CFLAGS = -Wall -I../../xen/include -I../../xenolinux-2.4.21-sparse/include
 XI_CREATE = xi_create
 XI_START = xi_start
 XI_STOP = xi_stop
