bitkeeper revision 1.259.2.7 (3f0c428fGYxQAV_56B2hOOjYs1PF0A)
Port a bunch of network drivers for low-quality NICS (which will incur extra copying overheads within Xen). But will allow us to work on a wider range of systems at least.

--- a/xen/drivers/net/tulip/Makefile
+++ b/xen/drivers/net/tulip/Makefile
@@ -2,7 +2,7 @@
 include $(BASEDIR)/Rules.mk
 
 default: $(OBJS)
-	$(LD) -r -o ne_drv.o $(OBJS)
+	$(LD) -r -o tulip.o $(OBJS)
 
 clean:
 	rm -f *.o *~ core
