--- a/xen/drivers/net/Makefile
+++ b/xen/drivers/net/Makefile
@@ -2,12 +2,14 @@
 include $(BASEDIR)/Rules.mk
 
 default: $(OBJS)
-	$(MAKE) -C ne
+	$(MAKE) -C tulip
+	$(MAKE) -C e100
 	$(MAKE) -C e1000
-	$(LD) -r -o driver.o e1000/e1000.o $(OBJS) ne/ne_drv.o
+	$(LD) -r -o driver.o e100/e100.o e1000/e1000.o $(OBJS) tulip/tulip.o
 
 clean:
-	$(MAKE) -C ne clean
+	$(MAKE) -C tulip clean
+	$(MAKE) -C e100 clean
 	$(MAKE) -C e1000 clean
 	rm -f *.o *~ core
 
