bitkeeper revision 1.339 (3f0d6d60VROcPVK9573_fpTcuFCUXg)
Rename domctl.xml to xenctl.xml

--- a/tools/control/Makefile
+++ b/tools/control/Makefile
@@ -9,7 +9,7 @@ clean: clean-cmdline clean-web
 cmdline: FORCE
 	ant -buildfile build-cmdline.xml dist
 
-install-cmdline: domctl
+install-cmdline: cmdline
 	cp xenctl-cmdline.jar xenctl ../../../install/bin
 	chmod 755 ../../../install/bin/xenctl
 
