bitkeeper revision 1.339.1.1 (3f108aff8cNSEyxZFIWHZ-zZtSTT2w)
Many files:
  new file
  Clean up dom0 proc interfaces. Implemented ioremap and /dev/mem.
.del-dom0_block.c~63815c1974691c1c:
  Delete: xenolinux-2.4.21-sparse/arch/xeno/drivers/dom0/dom0_block.c
.del-sched_ops.c~20807e5c2ed6b51:
  Delete: xenolinux-2.4.21-sparse/arch/xeno/drivers/dom0/sched_ops.c
.del-xi_list~49abab167156959:
  Delete: tools/internal/xi_list
.del-xl_physdisk_proc.c~49451bc26a40fcb2:
  Delete: xenolinux-2.4.21-sparse/arch/xeno/drivers/block/xl_physdisk_proc.c
.del-mmu.h~6bc56547519b6f96:
  Delete: xenolinux-2.4.21-sparse/include/asm-xeno/mmu.h
.del-dom0.h~6fb656bb4a0c52e1:
  Delete: xenolinux-2.4.21-sparse/include/asm-xeno/dom0.h
.del-dom0_ops.h~fb19960d77217740:
  Delete: tools/internal/dom0_ops.h
.del-dom0_ops.h~5c52b016e619bd2d:
  Delete: xenolinux-2.4.21-sparse/arch/xeno/drivers/dom0/dom0_ops.h
.del-dom0_memory.c~c72c6e5f7fd65d38:
  Delete: xenolinux-2.4.21-sparse/arch/xeno/drivers/dom0/dom0_memory.c
.del-direct_map.c~d2fedc686b334f2a:
  Delete: xenolinux-2.4.21-sparse/arch/xeno/mm/direct_map.c
direct_map.c:
  Rename: xenolinux-2.4.21-sparse/arch/xeno/mm/get_unmapped_area.c -> xenolinux-2.4.21-sparse/arch/xeno/mm/direct_map.c

--- a/tools/internal/Makefile
+++ b/tools/internal/Makefile
@@ -1,54 +1,26 @@
-CC = gcc
-CFLAGS = -Wall -I../../xen/include -I../../xenolinux-2.4.21-sparse/include
-XI_CREATE = xi_create
-XI_START = xi_start
-XI_STOP = xi_stop
-XI_DESTROY = xi_destroy
-XI_BUILD = xi_build
-XI_PHYS_GRANT = xi_phys_grant
-XI_PHYS_REVOKE = xi_phys_revoke
-XI_PHYS_PROBE = xi_phys_probe
 
-all: $(XI_CREATE).o $(XI_START).o $(XI_STOP).o $(XI_DESTROY).o $(XI_BUILD).o \
-	$(XI_PHYS_GRANT).o $(XI_PHYS_REVOKE).o $(XI_PHYS_PROBE).o
-	$(CC) -o $(XI_CREATE) $(XI_CREATE).o
-	$(CC) -o $(XI_BUILD) $(XI_BUILD).o
-	$(CC) -o $(XI_START) $(XI_START).o
-	$(CC) -o $(XI_STOP) $(XI_STOP).o
-	$(CC) -o $(XI_DESTROY) $(XI_DESTROY).o
-	$(CC) -o $(XI_PHYS_GRANT) $(XI_PHYS_GRANT).o
-	$(CC) -o $(XI_PHYS_REVOKE) $(XI_PHYS_REVOKE).o
-	$(CC) -o $(XI_PHYS_PROBE) $(XI_PHYS_PROBE).o
+CC       = gcc
+CFLAGS   = -Wall -O3 
+CFLAGS  += -I../../xen/include -I../../xenolinux-2.4.21-sparse/include
 
-$(XI_CREATE).o: $(XI_CREATE).c dom0_defs.h dom0_ops.h mem_defs.h
-	$(CC) $(CFLAGS) -c $(XI_CREATE).c 
+HDRS     = $(wildcard *.h)
+SRCS     = $(wildcard *.c)
+OBJS     = $(patsubst %.c,%.o,$(SRCS))
 
-internal_domain_build.o: internal_domain_build.c dom0_defs.h dom0_ops.h mem_defs.h
-	$(CC) $(CFLAGS) -c internal_domain_build.c 
+TARGETS  = xi_create xi_start xi_stop xi_destroy xi_build 
+TARGETS += xi_phys_grant xi_phys_revoke xi_phys_probe xi_list 
+TARGETS += xi_sched_global xi_sched_domain xi_usage
+INSTALL  = $(TARGETS) xi_vifinit xi_helper
 
-$(XI_START).o: $(XI_START).c dom0_defs.h dom0_ops.h mem_defs.h
-	$(CC) $(CFLAGS) -c $(XI_START).c 
-
-$(XI_STOP).o: $(XI_STOP).c dom0_defs.h dom0_ops.h mem_defs.h
-	$(CC) $(CFLAGS) -c $(XI_STOP).c 
-
-$(XI_DESTROY).o: $(XI_DESTROY).c dom0_ops.h dom0_defs.h
-	$(CC) $(CFLAGS) -c $(XI_DESTROY).c 
-
-$(XI_PHYS_GRANT).o: $(XI_PHYS_GRANT).c 
-	$(CC) $(CFLAGS) -c $(XI_PHYS_GRANT).c 
-
-$(XI_PHYS_REVOKE).o: $(XI_PHYS_REVOKE).c
-	$(CC) $(CFLAGS) -c $(XI_PHYS_REVOKE).c 
-
-$(XI_PHYS_PROBE).o: $(XI_PHYS_PROBE).c
-	$(CC) $(CFLAGS) -c $(XI_PHYS_PROBE).c 
+all: $(TARGETS)
 
 install: all
-	cp -a xi_list xi_vifinit xi_helper $(XI_CREATE) $(XI_BUILD) $(XI_START) $(XI_STOP) $(XI_DESTROY) $(XI_PHYSDEV_GRANT) $(XI_PHYS_REVOKE) $(XI_PHYS_PROBE).o../../../install/bin
-	chmod 755 ../../../install/bin/xi_list
+	cp -a $(INSTALL) ../../../install/bin
 	chmod 755 ../../../install/bin/xi_vifinit
 	chmod 755 ../../../install/bin/xi_helper
+
+clean:
+	$(RM) *.o *.rpm $(TARGETS)
 
 rpm: all
 	rm -rf staging
@@ -58,6 +30,6 @@ rpm: all
 	mv staging/i386/*.rpm .
 	rm -rf staging
 
-clean:
-	$(RM) *.o *.rpm $(XI_CREATE) $(XI_START) $(XI_STOP) $(XI_DESTROY) $(XI_BUILD) $(XI_PHYS_GRANT) $(XI_PHYS_REVOKE) $(XI_PHYS_PROBE)
+%: %.c $(HDRS) Makefile
+	$(CC) $(CFLAGS) -o $@ $<
 
